// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call startLogin on button lick 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Log in
  </button>
</div>
`;

exports[`should render LogInPage 1`] = `
<div>
  <button>
    Log in
  </button>
</div>
`;
